fix for backdrop z-index

--- a/src/scss/components/_sideDrawer.scss
+++ b/src/scss/components/_sideDrawer.scss
@@ -3,4 +3,5 @@
     max-height: 100vh;
     overflow: hidden;
     transition: width 0.2s ease-out;
+    z-index: 1001;
 }
